Fix company name jumping after opening the dropdowns

--- a/src/app/sites/cv/components/career-section/career-section.component.scss
+++ b/src/app/sites/cv/components/career-section/career-section.component.scss
@@ -25,7 +25,7 @@
 }
 
 .company {
-    align-self: center;
+    padding: 1rem 0;
     flex-basis: 60%;
 }
 
